<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_space"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/my_date"
        android:hint="@string/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="@string/duration"/>

        <Spinner
            android:id="@+id/start_time"
            android:hint="@string/start_time"
            android:textSize="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Spinner
            android:id="@+id/end_time"
            android:hint="@string/end_time"
            android:textSize="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        ></LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="#FF0000FF"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/capacity"
        android:hint="Number of People"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/bookButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book"/>

</LinearLayout>